--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,14 +7,13 @@ name = "markdown-math-solver"
 version = "1.0.0"
 description = "Process Python code embedded in LaTeX math blocks in Markdown files"
 readme = "README.md"
-license = {text = "MIT"}
+license = "MIT"
 requires-python = ">=3.8"
 keywords = ["markdown", "latex", "katex", "math", "solver", "sympy"]
 classifiers = [
     "Development Status :: 4 - Beta",
     "Intended Audience :: Education",
     "Intended Audience :: Science/Research",
-    "License :: OSI Approved :: MIT License",
     "Programming Language :: Python :: 3",
     "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9",
